# NLP_project

./: .gitignore  BertDataset.py  README.md  classification.ipynb  pyproject.toml
.ipynb_checkpoints/: BertClassifier-checkpoint.py
